[bug] Horizontal scrolling on mobile.  (#2617)
* Add overflow-x:hidden to prevent horizontal scrolling on mobile.

* Change margin for slider for mobile and tablet.

--- a/assets/base.css
+++ b/assets/base.css
@@ -2137,12 +2137,12 @@ product-info .loading-overlay:not(.hidden) ~ *,
 }
 
 .announcement-bar .slider-button--next {
-  margin-right: -1.6rem;
+  margin-right: -1.5rem;
   min-width: 44px;
 }
 
 .announcement-bar .slider-button--prev {
-  margin-left: -1.6rem;
+  margin-left: -1.5rem;
   min-width: 44px;
 }
 
@@ -2154,11 +2154,11 @@ product-info .loading-overlay:not(.hidden) ~ *,
 
 @media screen and (min-width: 750px) {
   .announcement-bar .slider-button--next {
-    margin-right: -3.8rem;
+    margin-right: -3.2rem;
   }
 
   .announcement-bar .slider-button--prev {
-    margin-left: -3.8rem;
+    margin-left: -3.2rem;
   }
 }
 
